# ddd-onion-hexagonal-rust-starter-template

./: .cursorrules  .env.example  .gitignore  AI.md  CLAUDE.md  CODEX.md  Dockerfile  GEMINI.md  Makefile  PROVENANCE.md  README.md
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/workflows/: ci.yml
backend/: .env  Cargo.toml  Makefile  deny.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: lib.rs
backend/crates/cli/: Cargo.toml
backend/crates/cli/src/: main.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: lib.rs
backend/migrations/: 20240328000000_create_users.sql
frontend/: package-lock.json
frontend/app/: page.tsx
scripts/: export-types.sh  verify.sh
