[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infra",
    "crates/api",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dotenvy = "0.15"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
ts-rs = "10.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
axum = "0.7"
clap = { version = "4.4", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
