[package]
name = "api"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/CosmicDreamer17/ddd-onion-hexagonal-rust-starter-template"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infra = { path = "../infra" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
