[package]
name = "application"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/CosmicDreamer17/ddd-onion-hexagonal-rust-starter-template"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
