[package]
name = "application"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/CosmicDreamer17/ddd-onion-hexagonal-rust-starter-template"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
