[package]
name = "domain"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/CosmicDreamer17/ddd-onion-hexagonal-rust-starter-template"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
ts-rs = "10.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
