[package]
name = "domain"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/CosmicDreamer17/ddd-onion-hexagonal-rust-starter-template"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
uuid = { workspace = true }
