[package]
name = "infra"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/CosmicDreamer17/ddd-onion-hexagonal-rust-starter-template"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
